--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,6 +12,7 @@
         android:background="@android:color/white"
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/img_row"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_margin="7dp"
